--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,17 @@
 {
   "name": "ApaceTicket ERP System",
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:18",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
-  "forwardPorts": [3000, 3001, 8025, 5432, 6379],
+  "forwardPorts": [3000, 4000, 8025, 5432, 6379],
   "portsAttributes": {
     "3000": {
       "label": "ApaceTicket Web App",
       "onAutoForward": "openBrowser"
     },
-    "3001": {
-      "label": "API Documentation"
+    "4000": {
+      "label": "API Server"
     },
     "8025": {
       "label": "MailHog Email Testing"
