--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
   redis:
     image: redis:7-alpine
@@ -27,6 +28,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
   api:
     build:
@@ -44,6 +46,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - PORT=4000
+      - HOST=0.0.0.0
       - JWT_SECRET=dev-secret-replace-in-production
       - FRONTEND_URL=http://web:3000
       - SMTP_HOST=mailhog
@@ -58,10 +61,12 @@ services:
       - /app/node_modules
     command: sh -c "npm run migration:run && npm run seed && npm run start:dev"
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:4000/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    restart: unless-stopped
 
   web:
     build:
@@ -69,6 +74,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    environment:
+      - NODE_ENV=development
+      - NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
     depends_on:
       api:
         condition: service_healthy
@@ -76,13 +84,27 @@ services:
       - ../apps/web:/app
       - /app/node_modules
       - /app/.next
-    command: npm run dev
+    command: npm run dev -- -H 0.0.0.0 -p 3000
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    restart: unless-stopped
 
   mailhog:
     image: mailhog/mailhog:latest
     ports:
       - "8025:8025"
       - "1025:1025"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8025/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    restart: unless-stopped
 
 volumes:
   postgres_data:
